--- a/index.html
+++ b/index.html
@@ -58,16 +58,17 @@
 
         <div class="button-grid">
             <button onclick="location.href='N4_TECHNICIAN_GUIDE.html'">N4</button>
-            <button onclick="location.href='AS GUIDE SMALL PRODUCT.HTML'">HEATING MATS</button>
-            <button onclick="location.href='N5 AS MANUAL.HTML'">N5 A/S MANUAL</button>
-            <button onclick="location.href='N5 DISASSEMBLY MANUAL.HTML'">N5 DISASSEMBLY MANUAL</button>
-            <button onclick="location.href='NLS AS MANUAL.HTML'">N-lIFE SLIM</button>
-            <button onclick="location.href='T9 AS MANUAL.HTML'">T9 MANUAL</button>
-            <button onclick="location.href='MHP100 MANUAL.HTML'">MHP100 MANUAL</button>
+            <button onclick="location.href='AS-GUIDE-MALL-PRODUCT.HTML'">HEATING MATS</button>
+            <button onclick="location.href='N5-AS-MANUAL.HTML'">N5 A/S MANUAL</button>
+            <button onclick="location.href='N5-DISASSEMBLY-MANUAL.HTML'">N5 DISASSEMBLY MANUAL</button>
+            <button onclick="location.href='NLS-AS-MANUAL.HTML'">N-lIFE SLIM</button>
+            <button onclick="location.href='T9-AS-MANUAL.HTML'">T9 MANUAL</button>
+            <button onclick="location.href='MHP100-MANUAL.HTML'">MHP100 MANUAL</button>
             <button onclick="location.href='NM_MAT_NOHEAT_NOERROR.HTML'">NM NO HEAT & NO ERROR</button>
-            <button onclick="location.href='HEATING WIRE REPAIR.HTML'">HEATING WIRE REPAIR</button>
+            <button onclick="location.href='HEATING-WIRE-REPAIR.HTML'">HEATING WIRE REPAIR</button>
         </div>
     </div>
 
 </body>
+
 </html>
