--- a/N4_TECHNICIAN_GUIDE.html
+++ b/N4_TECHNICIAN_GUIDE.html
@@ -36,8 +36,9 @@
   </style>
 </head>
 <body>
-<a class="back-btn" href="index.HTML">← Back</a>
+<a class="back-btn" href="index.html">← Back</a>
 
   <iframe src="N4 TECHNICIAN GUIDE.pdf#toolbar=0&navpanes=0"></iframe>
 </body>
+
 </html>
